athena-eks-nonprod-sites/test-multi-midland/geocodeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: geocodeservice
  labels:
    svc: geocodeservice
spec:
  selector:
    app: geocodeservice
  ports:
  - protocol: TCP
    port: 8095
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geocodeservice
  labels:
    name: geocodeservice
    scheduling: vn
  annotations:
    prometheus.io/path: "/actuator/prometheus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geocodeservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: geocodeservice
        app: geocodeservice
    spec:
      nodeSelector:
        nodeType: scheduling-vn
      tolerations:
      - effect: NoSchedule
        operator: Equal
        key: scheduling
        value: vn
      containers:
      - image: 696952606624.dkr.ecr.us-east-2.amazonaws.com/athena/geocodeservice:1.46.3
        name: geocodeservice
        command: ["/bin/sh", "-c"]
        args: 
          - >-
            . /home/athena/athena.env && java
            -Dspring.profiles.active=eks
            -Dcom.sun.management.jmxremote.port=6001
            -Dcom.sun.management.jmxremote=true
            -Dcom.sun.management.jmxremote.authenticate=false
            -Dcom.sun.management.jmxremote.ssl=false
            -Dcom.sun.management.jmxremote.rmi.port=6001
            -Dmanagement.context-path=/
            -Dmanagement.endpoints.web.base-path=/
            -Dmanagement.endpoints.web.exposure.include="*"
            -jar -XX:+UseG1GC -Xms256m -Xmx1024m /home/athena/app.jar
            --spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/Athena
            --athena.multi-tenant.enabled=false
        ports:
        - containerPort: 8095
          name: geocodeservice
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1536Mi
        volumeMounts:
        - mountPath: /home/athena/athena.env
          name: athenaenv
          subPath: athena.env
        imagePullPolicy: Always
      volumes:
        - name: athenaenv
          configMap:
            defaultMode: 420
            name: release
      restartPolicy: Always
