athena-eks-nonprod-sites/test-multi-midland/geoserverservice_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoserverservice
  labels:
    svc: geoserverservice
spec:
  type: NodePort
  selector:
    app: geoserverservice
  ports:
  - protocol: TCP
    port: 8070
    targetPort: 8080
    name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoserverservice
  labels:
    name: geoserverservice
    scheduling: vn
  annotations:
    prometheus.io/path: "/actuator/prometheus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoserverservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: geoserverservice
    spec:
      nodeSelector:
        nodeType: scheduling-vn
      tolerations:
      - effect: NoSchedule
        operator: Equal
        key: scheduling
        value: vn
      containers:
      - name: geoserverservice
        image: 696952606624.dkr.ecr.us-east-2.amazonaws.com/athena/geoserver:base
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /geo-data
          name: geo-data
        imagePullPolicy: Always
      volumes:
        - name: geo-data
          persistentVolumeClaim:
            claimName: geoserver-data-claim
