athena-eks-nonprod-sites/test-multi-midland/reportservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: reportservice
  labels:
    svc: reportservice
spec:
  selector:
    app: reportservice
  ports:
  - protocol: TCP
    port: 8084
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reportservice
  labels:
    name: reportservice
    scheduling: vn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reportservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: reportservice
        app: reportservice
    spec:
      nodeSelector:
        nodeType: scheduling-vn
      tolerations:
      - effect: NoSchedule
        operator: Equal
        key: scheduling
        value: vn
      containers:
      - image: 696952606624.dkr.ecr.us-east-2.amazonaws.com/athena/reportservice:1.46.3
        name: reportservice
        command: ["/bin/sh", "-c"]
        args:
        - >
          . /home/athena/athena.env && java
          -Dspring.profiles.active=eks
          -Dreports.output.folder=${ATHENA_PATH}/resources/report/
          -Dmanagement.context-path=/
          -Dmanagement.endpoints.web.base-path=/
          -Dmanagement.endpoints.web.exposure.include="*"
          -Dspring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/Athena
          -Dspring.data.mongodb.host=${CACHE_HOST}
          -Dkarros.keycloak.clientid=${KEYCLOAK_BACKEND_ID}
          -Dkarros.keycloak.clientsecret=${KEYCLOAK_SECRET}
          -Dkarros.keycloak.url=https://${KEYCLOAK_DOMAIN}/auth/realms/Edulog/protocol/openid-connect/token
          -Dathena.tenant.id=${TENANT_ID}
          -Dkarros.general.url=https://${KARROS_GATEWAY}
          -Dvms.api.url=https://${KARROS_GATEWAY}/api
          -Dreports.output.folder=${ATHENA_PATH}/resources/report/
          -jar -XX:+UseG1GC -Xms256m -Xmx1024m /home/athena/app.jar
        ports:
        - containerPort: 8084
          name: reportservice
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 2Gi          
        volumeMounts:
        - mountPath: /home/athena/athena.env
          name: athenaenv
          subPath: athena.env
        imagePullPolicy: Always
      volumes:
        - name: athenaenv
          configMap:
            defaultMode: 420
            name: release
      restartPolicy: Always
